--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,9 +17,7 @@
     <title>TinyApp</title>
   </head>
   <body>
-    <header>
       <%- include('partials/_header') %>
-    </header>
     <main style="margin: 1em;">
       <h3>My URLs</h3>
       <table class="table">
@@ -34,6 +32,11 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <td>
+                <form method="POST" action="/urls/<%= id %>/delete">
+                  <button type="submit" class="btn btn-outline-danger">Delete</button>
+                </form>
+              </td>
             </tr>
           <% } %>
         </tbody>
