--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -33,6 +33,11 @@
               <td><%= id %></td>
               <td><%= urls[id] %></td>
               <td>
+                <form method="GET" action="/urls/<%= id %>/">
+                  <button type="submit" class="btn btn-outline-primary">Edit</button>
+                </form>
+              </td>
+              <td>
                 <form method="POST" action="/urls/<%= id %>/delete">
                   <button type="submit" class="btn btn-outline-danger">Delete</button>
                 </form>
