--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,9 +18,16 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <% if (!username) { %>
     <form method="POST" action="/login">
       <input type="text" name="username" placeholder="Username">
       <button type="submit" class="btn btn-outline-secondary">Login</button>
     </form>
+    <% } else { %>
+      <p>Logged in as: <%= username %>! </p>
+      <form>
+      <button type="submit" class="btn btn-outline-secondary">Logout</button>
+      </form> 
+    <% } %>
   </nav>
 </header>
