--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -25,7 +25,7 @@
     </form>
     <% } else { %>
       <p>Logged in as: <%= username %>! </p>
-      <form>
+      <form method="POST" action="/logout">
       <button type="submit" class="btn btn-outline-secondary">Logout</button>
       </form> 
     <% } %>
