--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -20,7 +20,7 @@
     </div>
     <% if (!username) { %>
     <form method="POST" action="/login">
-      <input type="text" name="username" placeholder="Username">
+      <input type="text" name="username" id="username" placeholder="Username">
       <button type="submit" class="btn btn-outline-secondary">Login</button>
     </form>
     <% } else { %>
