--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -26,7 +26,7 @@
           <h2>Edit</h2>
           <form method="POST" action="/urls/<%= id %>/update">
             <label for="newLongURL">New URL:</label>
-            <input type="text" name="newLongURL" value=<%= longURL %>>
+            <input type="text" name="newLongURL"  id="newLongURL" value=<%= longURL %>>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
         </div>
