--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,23 +8,25 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous" />
+
   <title>Register</title>
 </head>
 
 <body>
   <%- include('partials/_header') %>
-    <div class="card text-center">
-      <div class="card-header"></div>
-      <div>
-        <h2>Edit</h2>
-        <form method="POST" action="/register">
+
+    <main style="margin: 1em;">
+      <h3>Register</h3>
+      <form class="form-inline" action="/register" method="POST">
+        <div class="form-group mb-2">
           <label for="email">Email:</label>
           <input type="email" name="email" id="email" placeholder="email">
+          <label for="password">Password:</label>
           <input type="password" name="password" id="password" placeholder="password">
           <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-      </div>
-    </div>
+        </div>
+      </form>
+    </main>
 
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
