--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -19,13 +19,13 @@
         <a class="nav-item nav-link" href="/register">Register</a>
       </div>
     </div>
-    <% if (!username) { %>
+    <% if (!user) { %>
     <form method="POST" action="/login">
-      <input type="text" name="username" id="username" placeholder="Username">
+      <input type="text" name="user" id="user" placeholder="Username">
       <button type="submit" class="btn btn-outline-secondary">Login</button>
     </form>
     <% } else { %>
-      <p>Logged in as: <%= username %>! </p>
+      <p>Logged in as: <%= user.email %>! </p>
       <form method="POST" action="/logout">
       <button type="submit" class="btn btn-outline-secondary">Logout</button>
       </form> 
