--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,12 +16,12 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <a class="nav-item nav-link" href="/login">Login</a>
         <a class="nav-item nav-link" href="/register">Register</a>
       </div>
     </div>
     <% if (!user) { %>
     <form method="POST" action="/login">
-      <input type="text" name="user" id="user" placeholder="Username">
       <button type="submit" class="btn btn-outline-secondary">Login</button>
     </form>
     <% } else { %>
