--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,14 +17,16 @@
 
     <main style="margin: 1em;">
       <h3>Register</h3>
-      <form class="form-inline" action="/register" method="POST">
-        <div class="form-group mb-2">
-          <label for="email">Email:</label>
-          <input type="email" name="email" id="email" placeholder="email">
-          <label for="password">Password:</label>
-          <input type="password" name="password" id="password" placeholder="password">
-          <button type="submit" class="btn btn-primary">Submit</button>
+      <form class="form" action="/register" method="POST">
+        <div class="form-group">
+          <label for="email">Email Address</label>
+          <input type="email" class="form-control" style="width: 300px" name="email" id="email" placeholder="Email">
         </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" style="width: 300px" name="password" id="password" placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-primary">Register</button>
       </form>
     </main>
 
